# hajimeteno-tonic

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  build.rs  devbox.json
k8s/: grpc-deployment.yaml  grpc-service-service.yaml  scylladb-deployment.yaml  scylladb-service.yaml
src/: main.rs
src/proto/: hello.proto  vector.proto
