[package]
name = "hajimeteno-tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
rand = "0.8.5"
scylla = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full", "macros", "rt-multi-thread"] }
tonic = "0.12.3"
